Add majesty content.

--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <meta name = "viewport" content= "width=device-width, initial-scale=1">
   <title>NAILY NEVAREZ</title>
+  <link rel="shortcut icon" href="myfavicon.ico" type="image/x-icon" />
 </head>
 
 <body>
